--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <title>PharmaCare - Your Trusted Pharmacy</title>
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
     <div class="container">
       <a class="navbar-brand fw-bold" href="#">PharmaCare</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
@@ -30,11 +32,47 @@
   </nav>
 
   <!-- Hero Section -->
-  <section id="home" class="d-flex align-items-center justify-content-center text-center" style="height:100vh; background:#e9f7ef;">
+  <section id="home" class="hero d-flex align-items-center text-center">
     <div class="container">
-      <h1 class="display-4 fw-bold text-success">Welcome to PharmaCare</h1>
-      <p class="lead text-dark">Your trusted partner in health, medicine, and wellness.</p>
-      <a href="#services" class="btn btn-success btn-lg mt-3">Explore Services</a>
+      <h1 class="display-4 fw-bold text-white">Welcome to PharmaCare</h1>
+      <p class="lead text-light">Your trusted partner in health, medicine, and wellness.</p>
+      <a href="#services" class="btn btn-light btn-lg mt-3">Explore Services</a>
+    </div>
+  </section>
+
+  <!-- Services Section -->
+  <section id="services" class="py-5 bg-light">
+    <div class="container text-center">
+      <h2 class="fw-bold mb-4 text-success">Our Services</h2>
+      <div class="row g-4">
+        <div class="col-md-4">
+          <div class="card h-100 shadow service-card">
+            <div class="card-body">
+              <i class="bi bi-capsule-pill fs-1 text-success"></i>
+              <h5 class="mt-3">Online Prescription</h5>
+              <p>Order and refill your prescriptions online with ease and convenience.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100 shadow service-card">
+            <div class="card-body">
+              <i class="bi bi-heart-pulse fs-1 text-success"></i>
+              <h5 class="mt-3">Health Consultation</h5>
+              <p>Talk to our expert pharmacists for professional advice and guidance.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100 shadow service-card">
+            <div class="card-body">
+              <i class="bi bi-truck fs-1 text-success"></i>
+              <h5 class="mt-3">Home Delivery</h5>
+              <p>Fast and reliable delivery of medicines to your doorstep.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
