--- a/index.html
+++ b/index.html
@@ -76,6 +76,23 @@
     </div>
   </section>
 
+  <!-- About Section -->
+  <section id="about" class="py-5">
+    <div class="container text-center">
+      <h2 class="fw-bold mb-4 text-success">About Us</h2>
+      <p class="lead">At <span class="fw-bold">PharmaCare</span>, we are committed to improving healthcare access by providing trusted medicines, professional consultation, and reliable delivery services. Our goal is to make healthcare simple, accessible, and affordable for everyone.</p>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="py-5 bg-light">
+    <div class="container text-center">
+      <h2 class="fw-bold mb-4 text-success">Contact Us</h2>
+      <p class="mb-3">We’d love to hear from you. Reach out for inquiries, prescriptions, or consultations.</p>
+      <a href="mailto:info@pharmacare.com" class="btn btn-success btn-lg"><i class="bi bi-envelope-fill me-2"></i>Email Us</a>
+    </div>
+  </section>
+
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
