--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <title>PharmaCare - Your Trusted Pharmacy</title>
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Animate.css for animations -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-success sticky-top shadow-sm">
     <div class="container">
       <a class="navbar-brand fw-bold" href="#">PharmaCare</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
@@ -32,19 +34,19 @@
   <!-- Hero Section -->
   <section id="home" class="d-flex align-items-center justify-content-center text-center">
     <div class="container">
-      <h1 class="display-4 fw-bold text-success">Welcome to PharmaCare</h1>
-      <p class="lead text-dark">Your trusted partner in health, medicine, and wellness.</p>
-      <a href="#services" class="btn btn-success btn-lg mt-3">Explore Services</a>
+      <h1 class="display-4 fw-bold animate__animated animate__fadeInDown">Welcome to PharmaCare</h1>
+      <p class="lead animate__animated animate__fadeInUp">Your trusted partner in health, medicine, and wellness.</p>
+      <a href="#services" class="btn btn-light btn-lg mt-3 animate__animated animate__zoomIn">Explore Services</a>
     </div>
   </section>
 
   <!-- Services Section -->
   <section id="services" class="py-5 bg-light text-center">
     <div class="container">
-      <h2 class="fw-bold text-success mb-4">Our Services</h2>
+      <h2 class="fw-bold text-success mb-4 animate__animated animate__fadeIn">Our Services</h2>
       <div class="row g-4">
         <div class="col-md-4">
-          <div class="card shadow-sm h-100">
+          <div class="card shadow-sm h-100 animate__animated animate__fadeInUp">
             <div class="card-body">
               <h5 class="card-title text-success">Online Prescriptions</h5>
               <p class="card-text">Easily upload and manage your prescriptions online for quick access to medicines.</p>
@@ -52,7 +54,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card shadow-sm h-100">
+          <div class="card shadow-sm h-100 animate__animated animate__fadeInUp" style="animation-delay: 0.3s;">
             <div class="card-body">
               <h5 class="card-title text-success">Health Consultation</h5>
               <p class="card-text">Talk to licensed pharmacists and doctors for health advice and drug usage guidance.</p>
@@ -60,7 +62,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card shadow-sm h-100">
+          <div class="card shadow-sm h-100 animate__animated animate__fadeInUp" style="animation-delay: 0.6s;">
             <div class="card-body">
               <h5 class="card-title text-success">Home Delivery</h5>
               <p class="card-text">Order medicines from home and get them delivered safely to your doorstep.</p>
@@ -74,8 +76,8 @@
   <!-- About Section -->
   <section id="about" class="py-5">
     <div class="container text-center">
-      <h2 class="fw-bold text-success mb-4">About Us</h2>
-      <p class="lead">At <strong>PharmaCare</strong>, we are committed to delivering high-quality medicines, exceptional customer service, and trusted healthcare support.  
+      <h2 class="fw-bold text-success mb-4 animate__animated animate__fadeIn">About Us</h2>
+      <p class="lead animate__animated animate__fadeInUp">At <strong>PharmaCare</strong>, we are committed to delivering high-quality medicines, exceptional customer service, and trusted healthcare support.  
       Our mission is to make healthcare affordable and accessible for everyone.</p>
     </div>
   </section>
@@ -83,9 +85,9 @@
   <!-- Contact Section -->
   <section id="contact" class="py-5 bg-light">
     <div class="container">
-      <h2 class="fw-bold text-success text-center mb-4">Contact Us</h2>
+      <h2 class="fw-bold text-success text-center mb-4 animate__animated animate__fadeIn">Contact Us</h2>
       <div class="row justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-6 animate__animated animate__fadeInUp">
           <form>
             <div class="mb-3">
               <label for="name" class="form-label">Full Name</label>
@@ -105,6 +107,12 @@
       </div>
     </div>
   </section>
+
+  <!-- Footer -->
+  <footer class="bg-success text-white py-3 text-center">
+    <p class="mb-0">© 2025 PharmaCare. All Rights Reserved.</p>
+    <small>Made with ❤️ for better healthcare</small>
+  </footer>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
