--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>PharmaCare - Your Trusted Pharmacy</title>
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Animate.css for animations -->
+  <!-- Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
@@ -31,7 +31,7 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
+  <!-- Hero Section with background image -->
   <section id="home" class="d-flex align-items-center justify-content-center text-center">
     <div class="container">
       <h1 class="display-4 fw-bold animate__animated animate__fadeInDown">Welcome to PharmaCare</h1>
@@ -40,13 +40,14 @@
     </div>
   </section>
 
-  <!-- Services Section -->
+  <!-- Services Section with images -->
   <section id="services" class="py-5 bg-light text-center">
     <div class="container">
       <h2 class="fw-bold text-success mb-4 animate__animated animate__fadeIn">Our Services</h2>
       <div class="row g-4">
         <div class="col-md-4">
           <div class="card shadow-sm h-100 animate__animated animate__fadeInUp">
+            <img src="images/prescription.jpg" class="card-img-top" alt="Online Prescriptions">
             <div class="card-body">
               <h5 class="card-title text-success">Online Prescriptions</h5>
               <p class="card-text">Easily upload and manage your prescriptions online for quick access to medicines.</p>
@@ -55,6 +56,7 @@
         </div>
         <div class="col-md-4">
           <div class="card shadow-sm h-100 animate__animated animate__fadeInUp" style="animation-delay: 0.3s;">
+            <img src="images/consultation.jpg" class="card-img-top" alt="Health Consultation">
             <div class="card-body">
               <h5 class="card-title text-success">Health Consultation</h5>
               <p class="card-text">Talk to licensed pharmacists and doctors for health advice and drug usage guidance.</p>
@@ -63,6 +65,7 @@
         </div>
         <div class="col-md-4">
           <div class="card shadow-sm h-100 animate__animated animate__fadeInUp" style="animation-delay: 0.6s;">
+            <img src="images/delivery.jpg" class="card-img-top" alt="Home Delivery">
             <div class="card-body">
               <h5 class="card-title text-success">Home Delivery</h5>
               <p class="card-text">Order medicines from home and get them delivered safely to your doorstep.</p>
@@ -73,12 +76,19 @@
     </div>
   </section>
 
-  <!-- About Section -->
+  <!-- About Section with image -->
   <section id="about" class="py-5">
-    <div class="container text-center">
-      <h2 class="fw-bold text-success mb-4 animate__animated animate__fadeIn">About Us</h2>
-      <p class="lead animate__animated animate__fadeInUp">At <strong>PharmaCare</strong>, we are committed to delivering high-quality medicines, exceptional customer service, and trusted healthcare support.  
-      Our mission is to make healthcare affordable and accessible for everyone.</p>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6 text-center animate__animated animate__fadeInLeft">
+          <img src="images/about.jpg" class="img-fluid rounded" alt="About PharmaCare">
+        </div>
+        <div class="col-md-6 text-center animate__animated animate__fadeInRight">
+          <h2 class="fw-bold text-success mb-4">About Us</h2>
+          <p class="lead">At <strong>PharmaCare</strong>, we are committed to delivering high-quality medicines, exceptional customer service, and trusted healthcare support.  
+          Our mission is to make healthcare affordable and accessible for everyone.</p>
+        </div>
+      </div>
     </div>
   </section>
 
